--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,17 @@
     "name": "cxj/svelte-logo-app",
     "description": "Demonstration App",
     "type": "project",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Chris Johnson",
             "email": "cxjohnson@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Cxj\\": ["src/", "public/"]
+        }
+    }
 }
