--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,13 @@
             "email": "cxjohnson@gmail.com"
         }
     ],
-    "require": {},
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=7.4",
+        "radar/adr": "~2",
+        "relay/middleware": "~1.0",
+        "laminas/laminas-diactoros": "~2.2"
+    },
     "autoload": {
         "psr-4": {
             "Cxj\\": ["src/", "public/"]
