Add php-mock/php-mock-phpunit to mock out syscalls
This package allows us to mock out any global PHP command that has
deleterious or challenging side effects, such as filesystem calls.

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpstan/phpstan": "^0.12.0@dev",
         "phpstan/phpstan-phpunit": "^0.12.0@dev",
         "phpunit/phpunit": "^9.4@dev",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "php-mock/php-mock-phpunit": "dev-master"
     },
     "autoload": {
         "psr-4": {
